# qna-agent

./: .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yml  main.py  pyproject.toml
app/api/v1/: routes.py
app/core/: config.py  database.py  openai.py
app/exception/: exception_handler.py
app/model/: chat_models.py
app/repository/: chat_message_repository.py  chat_session_repository.py
app/schema/: chat_message_schemas.py  chat_session_schemas.py
app/service/: chat_message_service.py  chat_session_service.py  query_ai_service.py
env/: app.example.env  ollama-webui.env  ollama.env
knowledge/: api_reference.txt  contact_info.txt  faq.txt  pricing.txt  product_info.txt
tests/: conftest.py
tests/api/v1/: test_chat_message_routes.py  test_chat_session_routes.py
tests/integration/: test_routes_integration.py
tests/repository/: test_chat_message_repository.py  test_chat_session_repository.py
tests/service/: test_chat_message_service.py  test_chat_session_service.py  test_query_ai_service.py
