[project]
name = "qna-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Aram Ohanyan"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.121.3,<0.122.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "openai (>=2.8.1,<3.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "testcontainers (>=4.13.3,<5.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
